[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbrt"
version = "0.1.0-alpha"
description = "Python package for accessing data from the Central Bank of the Republic of Türkiye"
authors = [
    { name = "Alper Yıldırım", email = "yildirimalper@outlook.de" }
]
license = { text = "MIT" }
dependencies = [
    "pandas",
    "requests"
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/yildirimalper/cbrt"